added jorge's name tp_final_capacidad_nuclear.ipynb

--- a/tp_final_capacidad_nuclear.ipynb
+++ b/tp_final_capacidad_nuclear.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Sección 1: Procesamiento de los Datos\n",
     "\n",
-    "**Alumnos**: Trinidad Monreal y Jorge Ceferino Valdez"
+    "**Alumnos**: Trinidad Monreal, Jorge Ceferino Valdez y Jorge Blajevitch"
    ]
   },
   {
